--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             //&& -> Significa um E / AND
             //|| -> Significa um OU / OR
-            if (scrollTop > 5 && scrollTop < 120) //Se scroll maior que 5 e menor que 120 mexe nuvem 1
+            if (scrollTop > 5 && scrollTop < 120)
             {
                 //alert("if1");
                 $('.nuvemblur1').stop().animate({top:"80%", width: "750px", height: "800px"},50);
